name:                IpParsing
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Parsing#readme
license:             MIT
license-file:        LICENSE
author:              Lloyd
maintainer:          lloydmeta@gmail.com
copyright:           2017 Lloyd Chan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Data.IpAddress
                     , Data.IpAddress.Internal
  build-depends:       base >= 4.7 && < 5
                     , trifecta
                     , containers
                     , MissingH
  default-language:    Haskell2010

test-suite IpParsing-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       IpAddressSpec
  build-depends:       base
                     , IpParsing
                     , hspec
                     , trifecta
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Parsing
